@@ -170,3 +170,21 @@ http://repo.or.cz/w/boost.m4.git
 Or simply download the latest version:
   wget 'http://repo.or.cz/w/boost.m4.git?a=blob_plain;f=build-aux/boost.m4;hb=HEAD' -O boost.m4
 Patches welcome.
+
+LICENSE
+-------
+
+The code of boost.m4 is released under GPLv3+ with the following additional
+clause:
+
+ Additional permission under section 7 of the GNU General Public
+ License, version 3 ("GPLv3"):
+
+ If you convey this file as part of a work that contains a
+ configuration script generated by Autoconf, you may do so under
+ terms of your choice.
+
+This clause has been written by FSF lawyers for Autotools.  If you have any
+concerns about legal issues, do not contact me as I Am Not A Lawyer.  I
+*think* you can get advices at <copyright-clerk at fsf dot org>.  The intent
+here is to keep the code Free but to allow anyone to *use* it.
