@@ -21,6 +21,13 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
+Additional permission under section 7 of the GNU General Public
+License, version 3 ("GPLv3"):
+
+If you convey this file as part of a work that contains a
+configuration script generated by Autoconf, you may do so under
+terms of your choice.
+
 Local Variables:
 mode: outline
 End:
